[package]
name = "appchain-anchor-ibc"
version = "1.0.2"
authors = ["Octopus Network"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
hex = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true }
prost = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
base64 = { workspace = true }
octopus-lpos = { workspace = true }
